config.json: updated domain

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -70,5 +70,6 @@
                 "new_window": true
             }
         ]
-    }
+    },
+    "domain": "https://remarkable-tomato-e22b3.netlify.app"
 }
