config.json: updated content in footer

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -68,7 +68,8 @@
                 "icon": "linkedin",
                 "new_window": true
             }
-        ]
+        ],
+        "content": "Flagship Technologies, LLC"
     },
     "domain": "https://remarkable-tomato-e22b3.netlify.app"
 }
