--- a/content/data/config.json
+++ b/content/data/config.json
@@ -69,7 +69,7 @@
                 "new_window": true
             }
         ],
-        "content": "Flagship Technologies, LLC"
+        "content": "市ーFlagship Technologies, LLC"
     },
     "domain": "https://remarkable-tomato-e22b3.netlify.app"
 }
